# parametric-curve-fitting-rd

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
docs/: derivation.md
notebooks/: analysis.ipynb
scripts/: run_fit.py  validate_score.sh
src/: __init__.py  data_loader.py  loss.py  model.py  optimizer.py  plotting.py  utils.py
tests/: conftest.py  test_model_predict.py  test_optimizer_integration.py
