[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research_rd"
version = "1.0.0"
description = "Parametric curve fitting for research and development"
authors = [{name = "Research Team"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "jupyter>=1.0.0",
    "notebook>=6.5.0",
    "pytest>=7.3.0",
    "sympy>=1.12.0",
]

[project.optional-dependencies]
dev = ["black", "flake8", "mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
