[metadata]
name = research_rd
version = 1.0.0
description = Parametric curve fitting for research and development
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.11
install_requires =
    numpy>=1.24.0
    pandas>=2.0.0
    scipy>=1.10.0
    matplotlib>=3.7.0
    seaborn>=0.12.0
    jupyter>=1.0.0
    notebook>=6.5.0
    pytest>=7.3.0
    sympy>=1.12.0

[options.packages.find]
where = .
include = src*

[flake8]
max-line-length = 100
exclude = .git,__pycache__,venv,.venv,build,dist

[mypy]
python_version = 3.11
warn_return_any = True
warn_unused_configs = True
